--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   sqflite: ^2.3.0
   path: ^1.8.3
   flutter_svg: ^2.0.9
+  connectivity_plus: ^5.0.2
+  internet_connection_checker: ^1.0.0+1
+  font_awesome_flutter: ^10.6.0
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
